[package]
name = "filesize"
description = "File Size Server."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
clap = { version = "4.5.4", features = ["derive"] }
regex = "1.10.4"
serde = { version = "1.0.201", features = ["derive"] }
walkdir = "2.5.0"
